# census31-eq-questionnaire-runner

./: .codecov.yml  .development.env  .dockerignore  .editorconfig  .eslintrc  .functional-tests.env  .gitignore  .markdownlintignore  .mega-linter.yml  .pylintrc  .schemas-version  .stylelintrc  .tern-project  Dockerfile  Makefile  README.md  application.py  dev-secrets.yml  docker-compose-aims.yml  docker-compose-dev.yml  docker-compose-schema-validator.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  profile_application.py  pyproject.toml  run_app.sh  setup.cfg  uwsgi.ini
.github/: dependabot.yaml
.github/workflows/: codeql-analysis.yml  mega-linter.yml  pull_request.yml  v3_census.yml
app/: globals.py  jinja_filters.py  secrets.py  settings.py  setup.py
app/authentication/: authenticator.py  cookie_session.py  jti_claim_storage.py
app/cloud_tasks/: __init__.py  cloud_task_publishers.py
app/data_models/: answer.py  answer_store.py  app_models.py  data_stores.py  list_store.py  metadata_proxy.py  progress_store.py  questionnaire_store.py  relationship_store.py  session_store.py  supplementary_data_store.py
app/forms/: duration_form.py  email_form.py  error_messages.py  questionnaire_form.py  validators.py
app/helpers/: address_lookup_api_helper.py  form_helpers.py  language_helper.py  schema_helpers.py  session_helpers.py  template_helpers.py
app/oidc/: gcp_oidc.py
app/publisher/: publisher.py
app/questionnaire/: __init__.py  dependencies.py  dynamic_answer_options.py  path_finder.py  placeholder_parser.py  placeholder_renderer.py  placeholder_transforms.py  questionnaire_schema.py  questionnaire_store_updater.py  relationship_router.py  router.py  rules.py  schema_utils.py  (+1 more)
ci/: README.md  backup_questionnaire_state.yaml  deploy_app.sh  deploy_credentials.sh  purge_expired_questionnaire_state.yaml  purge_expired_sessions.yaml  purge_submitted_questionnaire_state.yaml  restore_questionnaire_state.yaml
doc/: linting-process.md  megalinter-process.md  python-type-hinting.md
megalinter-reports/: IDE-config.txt
scripts/: README.md  extract_translation_templates.py  generate_integration_test.py  load_print_styles_from_cdn.sh  load_release.sh  run_lint_python.sh  run_tests_unit.sh  validate_test_schemas.py
templates/: confirmation-email-sent.html  interstitial.html  preview.html  sectionsummary.html  thank-you.html
(+573 files in other folders)
